<resources>
    <string name="app_name">Business Card</string>
    <string name="action_settings">Settings</string>
    <string name="news">Proudly serving coffee to the Madison and Monona communities for over 10 years!</string>
    <string name="name">Java Cat</string>
    <string name="address">3918 Monona Drive\nMadison, WI 53716\n608-223-5553</string>
    <string name="testimonial">"If it wasn't for coffee, I'd have no identifiable personality whatsoever."\n-David Letterman</string>
    <string name="main_image">Coffee shop</string>
</resources>
