<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/mainbackground" >

    <TextView
        android:id="@+id/announce"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/news"
        android:textSize="24dp"
        android:textStyle="bold"
        android:textAlignment="center"
        android:padding="10dp" />

    <ImageView
        android:id="@+id/photo"
        android:layout_below="@id/announce"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/javacat"
        android:contentDescription="@string/main_image"
        android:adjustViewBounds="true" />

    <TextView
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/announce"
        android:layout_marginLeft="15dp"
        android:text="@string/name"
        android:textColor="@android:color/white"
        android:textSize="48dp" />

    <TextView
        android:layout_below="@id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="150dp"
        android:text="@string/address"
        android:textSize="18dp"
        android:textColor="@android:color/white" />

    <TextView
        android:id="@+id/quote"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:text="@string/testimonial"
        android:textSize="28sp"
        android:textStyle="italic"
        android:textColor="@android:color/holo_blue_bright"
        android:textAlignment="center"
        android:layout_margin="10dp" />
</RelativeLayout>